--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -119,8 +119,8 @@
                             data-x="['left','left','left','left','left']" 
                             data-y="['middle','middle','middle','middle','middle']" 
                             data-hoffset="['0','15','15','15','15']" 
-                            data-voffset="['-30','-30','-30','-30','-60']"  
-                            data-fontsize="['80','80','60','60','40']"
+                            data-voffset="['-250','-250','-250','-250','-290']"  
+                            data-fontsize="['70','70','50','50','30']"
                             data-lineheight="['90','90','70','70','50']"
                             data-width="['none','none','none','none']"
                             data-height="none"
@@ -138,8 +138,8 @@
                             data-x="['left','left','left','left','left']" 
                             data-y="['middle','middle','middle','middle']" 
                             data-hoffset="['0','15','15','15','15']" 
-                            data-voffset="['50','50','50','40','0']" 
-                            data-fontsize="['28','28','28','20','20']"
+                            data-voffset="['-150','-150','-150','-140','-130']" 
+                            data-fontsize="['24','24','24','16','16']"
                             data-lineheight="['38','38','38','30','30']"
                             data-width="['760','760','760','550','400']"
                             data-height="none"
@@ -161,11 +161,11 @@
                         <!-- LAYERS -->
                         <div class="slider_text_box">
                             <div class="tp-caption first_text" 
-                            data-x="['center','center','center','center']" 
+                            data-x="['left','left','left','left']" 
                             data-y="['middle','middle','middle','middle']" 
                             data-hoffset="['0','0','0','0']" 
-                            data-voffset="['-38','-38','-38','-20','-20']" 
-                            data-fontsize="['28','28','28','28']"
+                            data-voffset="['-150','-150','-150','-130','-130']" 
+                            data-fontsize="['24','24','24','24']"
                             data-lineheight="['38','38','38','38']"
                             data-width="none"
                             data-height="none"
@@ -180,11 +180,11 @@
                             data-paddingleft="[0,0,0,0]">We are Builders</div>
                                 
                             <div class="tp-caption secand_text" 
-                            data-x="['center','center','center','center']" 
+                            data-x="['left','left','left','left']" 
                             data-y="['middle','middle','middle','middle']" 
                             data-hoffset="['0','0','0','0']" 
-                            data-voffset="['38','38','38','38','38']" 
-                            data-fontsize="['110','110','110','50','50']"
+                            data-voffset="['-240','-240','-240','-240','-240']" 
+                            data-fontsize="['100','100','100','40','40']"
                             data-lineheight="['100','100','100','70','70']"
                             data-width="['none','none','none','none']"
                             data-height="none"
@@ -308,7 +308,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="project_left_side" style="padding-top: 22px">
-                            <div class="main_b_title">
+                            <div class="main_b_title" style="font-size: 40px">
                                 <h2>our <br class="title_br" /> services</h2>
                         
                             </div>
