--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -309,7 +309,7 @@
                     <div class="col-md-3 col-md-offset-5">
                         <div class="project_left_side" style="padding-top: 22px; "> <center> 
                             <div class="main_b_title" style="">
-                                <h2 style="font-size: 80px;">our <br class="title_br" /> services</h2>
+                              <center>   <h2 style="font-size: 80px;">our <br class="title_br" /> services</h2> </center>
                         
                             </div>
                             <!--<ul class="our_project_filter">
