--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -308,7 +308,7 @@
                 <div class="row">
                     <div class="col-md-3 col-md-offset-5">
                         <div class="project_left_side" style="padding-top: 22px; "> <center> 
-                            <div class="main_b_title" style="">
+                            <div class="main_b_title" style="height: 100px">
                               <h2 >our <br class="title_br" /> services</h2>
                             </div>
                             <!--<ul class="our_project_filter">
@@ -1183,7 +1183,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>&nbsp;
             {
             color: #d6251c;}
             .roundimg{
-                border-radius: 50%;
+                border-radius: 100%;
                  height: 100px;
             }
             .our_project_details .project_item{
