--- a/webuilder/about.html
+++ b/webuilder/about.html
@@ -93,12 +93,16 @@
         <section class="who_we_are_area" id="about">
             <div class="container">
                 <div class="row who_we_inner">
-                    <center>
-                    <div class="main_w_title">
-                        <h2 style="padding-top: 20px; padding-bottom: 50px;">About<!--<br class="title_br" />--> Us</h2>
-                        <!--<h6>All About US</h6>-->
+                    <div class="main_c_b_title" style="padding-bottom: 70px;  padding-top: 70px;">
+                        <h2 style="font-weight: bolder">About<br class="title_br" />Us</h2>
+                        <!--<h6>Construction World</h6>-->
                     </div>
-                    </center>
+                    <!--<center>
+                    <div class="main_w_title">
+                        <h2 style="padding-top: 20px; padding-bottom: 50px;">About<br class="title_br" /> Us</h2>
+                        <h6>All About US</h6>
+                    </div>
+                    </center>-->
                     <div class="col-md-6">
                         <div class="who_we_left_content">
                             
@@ -119,9 +123,14 @@
                 </div>
                 <div class="row who_we_inner">
                     <div class="main_w_title">
-                        <div class="main_w_title">
-                                <center><h2 style="padding-top: 30px; padding-bottom: 40px;"><br>&nbsp;Why<!-- <br class="title_br" />--> Us?</h2></center>
-                            </div>
+                        
+                        <div class="main_c_b_title" style="padding-bottom: 50px; padding-top: 100px;">
+                            <h2 style="font-weight: bolder">News &<br class="title_br" />Events</h2>
+                            <!--<h6>Construction World</h6>-->
+                        </div>
+                        <!--<div class="main_w_title">
+                                <center><h2 style="padding-top: 30px; padding-bottom: 40px;"><br>&nbsp;Why <br class="title_br" /> Us?</h2></center>
+                            </div>-->
                         <!--<h3><br><br>Why Us</h3>-->
                     </div>
                     <div class="col-md-4">
