--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -197,6 +197,7 @@
                <center>  <div><img class="img-responsive" src="img/home-slider/project-g-three-1.jpg"></div> </center>
                <center>  <div><img class="img-responsive" src="img/home-slider/project-g-three-2.jpg"></div> </center>
                <center>  <div><img class="img-responsive" src="img/home-slider/project-g-three-3.jpg"></div> </center>
+                <center>  <div><img class="img-responsive" src="img/home-slider/project-g-three-4.jpg"></div> </center>
             </div>
         </section>
         
