--- a/webuilder/services.html
+++ b/webuilder/services.html
@@ -94,7 +94,7 @@
         <section class="who_we_are_area" id="about">
             <div class="container">
                 <div class="row who_we_inner">
-                    <div class="main_c_b_title" style="padding-bottom: 100px;">
+                    <div class="main_c_b_title" style="padding-bottom: 70px; padding-top: 50px;">
                         <h2 style="font-weight: bolder">Our<br class="title_br" />Services</h2>
                         <!--<h6>Construction World</h6>-->
                     </div>
@@ -125,6 +125,7 @@
                     </div>
                 </div>
               <div class="row">
+                  <br><br><br>
                     <div class="col-md-8 col-md-offset-2"> 
                         <div class="our_project_details">
                             <div class="boxed">
