--- a/webuilder/clients.html
+++ b/webuilder/clients.html
@@ -91,7 +91,7 @@
         
         <!--================Clients Area =================-->
         <section class="clients_area">
-            <div class="main_c_b_title" style="padding-bottom: 50px;">
+            <div class="main_c_b_title" style="padding-bottom: 30px; padding-top: 30px;">
                     <h2>Our<br class="title_br" />Clients</h2>
                     <!--<h6>Construction World</h6>-->
                 </div>
