--- a/webuilder/contact.html
+++ b/webuilder/contact.html
@@ -144,13 +144,16 @@
         
         <!--================Map Area =================-->
         <div id="mapBox" class="mapBox row m0" 
-        data-lat="40.7112969" 
-        data-lon="-74.1393991" 
+        data-lat="18.687495" 
+        data-lon="73.806987" 
         data-zoom="10" 
         data-marker="img/map-marker.png" 
-        data-info="Dhaka, uttara, Sector 10, Road 22"
-        data-mlat="40.7112969"
-        data-mlon="-74.1393991"></div>
+        data-info="Gate No. 15, Shelar Wasti, Dehu-Moshi Road, Chikali, Pune - 411 062"
+        data-mlat="18.687495"
+        data-mlon="73.806987"></div>
+       <!-- <center> 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.4798167733243!2d73.80518971466165!3d18.687324668930827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b7bd5a74a8f9%3A0x822eeffa82a51cd2!2sDehu+-+Moshi+Rd%2C+Patilnagar%2C+Chikhali%2C+Pimpri-Chinchwad%2C+Maharashtra+412114!5e0!3m2!1sen!2sin!4v1538660653620" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </center>-->
         <!--================End Map Area =================-->
         
         <!--================Footer Area =================-->
