--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -39,6 +39,7 @@
                     <div class="pull-left">
                         <a><i class="fa fa-phone"></i>(020) - 6630 9584</a>
                         <a><i class="fa fa-map-marker"></i>Chikhali, Pune 411062</a>
+                        <a href="/img/Pack Line Mas Systech Brochure.pdf" download="Pack Line Mas Systech Catalogue"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download Catalogue</a>
                         <!--<a><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>-->
                     </div>
                     <div class="pull-right">
@@ -63,7 +64,7 @@
                             <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt=""></a>
-                            <a class="navbar-brand" href="index.html" style="padding-left: 30px;"><img src="img/1who-we.png" alt=""></a>
+                            <!--<a class="navbar-brand" href="index.html"><img src="img/1who-we.png" alt=""></a>-->
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,6 +81,7 @@
                                 
                                 <li><a href="news.html">News & Events</a></li>
                                 <li><a href="contact.html">Contact</a></li>
+                                <a class="navbar-brand" href="index.html"><img src="img/1who-we.png" alt=""></a>
         
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -108,7 +110,7 @@
            <div class="container">
                <div class="main_c_b_title" style="padding-top: 30px; padding-bottom: 70px;">
                     <h2>Indigenous <br class="title_br"> Packaging Solutions</h2>
-                    <h6>Global Technology at Local Cost</h6>
+                    <h3 style="color: #d6251c">Global Technology at Local Cost</h3>
                 </div>
                 <!--<ul class="our_project_filter">
                     <li class="active" data-filter="*"><a href="#">All</a></li>
@@ -235,8 +237,8 @@
                     </div>
                     <div class="col-md-4 col-sm-6 isolation tiling interior plumbing">
                         <div class="project_item">
-                            <img src="img/project/project-grid-three/project-g-three-09%20-%20Copy.jpg" alt="">
-                            <center> <h4>Special Conveyor and Automation</h4></center>
+                            <img src="img/project/project-grid-three/project-g-three-13.jpg" alt="">
+                            <center> <h4>Special Conveyors and Automation</h4></center>
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
