--- a/webuilder/news.html
+++ b/webuilder/news.html
@@ -39,6 +39,7 @@
                     <div class="pull-left">
                         <a><i class="fa fa-phone"></i>(020) - 6630 9584</a>
                         <a><i class="fa fa-map-marker"></i>Chikhali, Pune 411062</a>
+                        <a href="/img/Pack Line Mas Systech Brochure.pdf" download="Pack Line Mas Systech Catalogue"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Download Catalogue</a>
                         <!--<a><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>-->
                     </div>
                     <div class="pull-right">
@@ -63,7 +64,7 @@
                             <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt=""></a>
-                            <a class="navbar-brand" href="index.html" style="padding-left: 30px;"><img src="img/1who-we.png" alt=""></a>
+                            <!--<a class="navbar-brand" href="index.html"><img src="img/1who-we.png" alt=""></a>-->
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,6 +81,7 @@
                                 
                                 <li class="active"><a href="news.html">News & Events</a></li>
                                 <li><a href="contact.html">Contact</a></li>
+                                <a class="navbar-brand" href="index.html"><img src="img/1who-we.png" alt=""></a>
         
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -93,7 +95,7 @@
         <section class="latest_news_area" style="background-color: #f5f5f5;" id="events">
             <div class="container">
                 <div class="main_c_b_title" style="padding-bottom: 100px;">
-                    <h2>News &<br class="title_br" />Events</h2>
+                    <h2>News & Events</h2>
                     <!--<h6>Construction World</h6>-->
                 </div>
                 <div class="row latest_news_inner">
